--- a/GeneralSnippets/GeneralSnippets.vcxproj
+++ b/GeneralSnippets/GeneralSnippets.vcxproj
@@ -301,6 +301,7 @@
     <ClCompile Include="RegExpr\RegExpr.cpp" />
     <ClCompile Include="RValueLValue\Module_RValueLValue.ixx" />
     <ClCompile Include="RValueLValue\RValueLValue.cpp" />
+    <ClCompile Include="Seminar_01_STL.cpp" />
     <ClCompile Include="SFINAE_EnableIf\Module_Sfinae.ixx" />
     <ClCompile Include="SFINAE_EnableIf\Sfinae.cpp" />
     <ClCompile Include="SharedPtr\Module_SharedPtr.ixx" />
