--- a/GeneralSnippets/GeneralSnippets.vcxproj.filters
+++ b/GeneralSnippets/GeneralSnippets.vcxproj.filters
@@ -660,6 +660,9 @@
     <ClCompile Include="Expected\Module_Expected.ixx">
       <Filter>Modules</Filter>
     </ClCompile>
+    <ClCompile Include="Seminar_01_STL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Readme.md">
