--- a/GeneralSnippets/GeneralSnippets.vcxproj
+++ b/GeneralSnippets/GeneralSnippets.vcxproj
@@ -302,6 +302,7 @@
     <ClCompile Include="RValueLValue\Module_RValueLValue.ixx" />
     <ClCompile Include="RValueLValue\RValueLValue.cpp" />
     <ClCompile Include="Seminar_01_STL.cpp" />
+    <ClCompile Include="Seminar_02_Aufgabe_MyString.cpp" />
     <ClCompile Include="SFINAE_EnableIf\Module_Sfinae.ixx" />
     <ClCompile Include="SFINAE_EnableIf\Sfinae.cpp" />
     <ClCompile Include="SharedPtr\Module_SharedPtr.ixx" />
