--- a/GeneralSnippets/GeneralSnippets.vcxproj.filters
+++ b/GeneralSnippets/GeneralSnippets.vcxproj.filters
@@ -663,6 +663,9 @@
     <ClCompile Include="Seminar_01_STL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Seminar_02_Aufgabe_MyString.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Readme.md">
